add forward slash

--- a/package.json
+++ b/package.json
@@ -37,5 +37,5 @@
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
   },
-  "homepage": "/soontobestraussner"
+  "homepage": "/soontobestraussner/"
 }
