--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -21,7 +21,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-scroll": "^1.9.0",
-    "gh-pages": "^6.1.1",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
@@ -36,9 +35,9 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.27",
+    "react-scripts": "latest",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5",
-    "react-scripts": "latest"
+    "vite": "^4.4.5"
   },
-  "homepage": "https://username.github.io/soontobestraussner"
+  "homepage": "https://smatsukis.github.io/soontobestraussner/"
 }
